# ghcli

./: .gitignore  Makefile  README.md  pyproject.toml
src/ghcli/: api.py  cli.py  gui.py  model.py
